[gd_scene load_steps=17 format=3 uid="uid://dt163nhu7v3w7"]

[ext_resource type="Script" uid="uid://dsbbs6n1t25p5" path="res://scenes/menu.gd" id="1_cqxam"]
[ext_resource type="PackedScene" uid="uid://ddg33gy842v6y" path="res://components/MusicVolume/music_volume.tscn" id="2_hu5mp"]
[ext_resource type="FontFile" uid="uid://cv2ttld2pgrrl" path="res://assets/Steamwreck-07pd.ttf" id="3_j0e48"]
[ext_resource type="Theme" uid="uid://c2u68cvn6q7d6" path="res://assets/theme.tres" id="4_pn5dn"]
[ext_resource type="PackedScene" uid="uid://bqxbl5g2mq8ux" path="res://components/OuterCircle/circle.tscn" id="5_sy34g"]
[ext_resource type="Texture2D" uid="uid://cd5i1nvji8qy5" path="res://components/Coq/coq.png" id="6_83t6f"]
[ext_resource type="PackedScene" uid="uid://dekch12eksf1o" path="res://components/chevron/chevron.tscn" id="7_h1vtx"]
[ext_resource type="PackedScene" uid="uid://c5b4kmyq4areg" path="res://components/collector/collector.tscn" id="8_eaqdx"]
[ext_resource type="PackedScene" uid="uid://dsvxyitdo575o" path="res://components/Source/source.tscn" id="9_t8y1r"]
[ext_resource type="AudioStream" uid="uid://dcldrvbm6b3bb" path="res://assets/click.wav" id="10_j5env"]
[ext_resource type="PackedScene" uid="uid://iagogoxodntu" path="res://components/blocker_circle/blocker_ring.tscn" id="11_4spa3"]

[sub_resource type="Shader" id="25"]
code = "shader_type canvas_item;
//render_mode unshaded; // optional

// Noise texture
uniform sampler2D noise_texture: repeat_enable, filter_nearest;
// Fog density
uniform float density: hint_range(0.0, 1.0) = 0.25;
// Fog speed
uniform vec2 speed = vec2(0.02, 0.01);


// Called for every pixel the material is visible on
void fragment() {
	// Make the fog slowly move
	vec2 uv = UV + speed * TIME;
	// Sample the noise texture
	float noise = texture(noise_texture, uv).r;
	// Convert the noise from the (0.0, 1.0) range to the (-1.0, 1.0) range
	// and clamp it between 0.0 and 1.0 again
	float fog = clamp(noise * 2.0 - 1.0, 0.0, 1.0);
	// Apply the fog effect
	COLOR.a *= fog * density;
}
"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_mhnvy"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_kvpfn"]
noise = SubResource("FastNoiseLite_mhnvy")
seamless = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ytvr"]
shader = SubResource("25")
shader_parameter/noise_texture = SubResource("NoiseTexture2D_kvpfn")
shader_parameter/density = 0.1170000055575
shader_parameter/speed = Vector2(0, -0.02)

[sub_resource type="Environment" id="Environment_13sgg"]
glow_enabled = true
glow_intensity = 0.24
glow_bloom = 0.15
adjustment_enabled = true
adjustment_brightness = 1.17
adjustment_contrast = 1.05
adjustment_saturation = 0.44

[node name="Menu" type="Node2D"]
script = ExtResource("1_cqxam")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Info" type="Label" parent="CanvasLayer"]
visible = false
self_modulate = Color(1, 1, 1, 0.5254902)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -412.0
offset_top = -58.0
offset_right = -35.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Made in 48h for Ludum Dare compo by Jiri Hysek"

[node name="MusicVolume" parent="CanvasLayer" instance=ExtResource("2_hu5mp")]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -65.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = 65.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Levels" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -75.0
offset_top = 152.0
offset_right = -35.0
offset_bottom = 192.0
grow_horizontal = 0

[node name="play again" type="Label" parent="CanvasLayer/Levels"]
self_modulate = Color(0.69803923, 0.6039216, 0.36862746, 1)
layout_mode = 0
offset_left = -94.0
offset_top = 40.0
offset_right = -12.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("3_j0e48")
theme_override_font_sizes/font_size = 30
text = "play again"

[node name="Buttons" type="Control" parent="CanvasLayer/Levels"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="1" type="Button" parent="CanvasLayer/Levels/Buttons"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 83.0
theme = ExtResource("4_pn5dn")
theme_override_colors/font_color = Color(0.69803923, 0.6039216, 0.36862746, 1)
theme_override_fonts/font = ExtResource("3_j0e48")
theme_override_font_sizes/font_size = 30
text = "1"

[node name="2" type="Button" parent="CanvasLayer/Levels/Buttons"]
layout_mode = 0
offset_left = 11.0
offset_top = 93.0
offset_right = 49.0
offset_bottom = 136.0
theme_override_colors/font_color = Color(0.69803923, 0.6039216, 0.36862746, 1)
theme_override_fonts/font = ExtResource("3_j0e48")
theme_override_font_sizes/font_size = 30
text = "2"

[node name="3" type="Button" parent="CanvasLayer/Levels/Buttons"]
layout_mode = 0
offset_left = 11.0
offset_top = 145.0
offset_right = 49.0
offset_bottom = 188.0
theme_override_colors/font_color = Color(0.69803923, 0.6039216, 0.36862746, 1)
theme_override_fonts/font = ExtResource("3_j0e48")
theme_override_font_sizes/font_size = 30
text = "3"

[node name="4" type="Button" parent="CanvasLayer/Levels/Buttons"]
layout_mode = 0
offset_left = 11.0
offset_top = 201.0
offset_right = 49.0
offset_bottom = 244.0
theme_override_colors/font_color = Color(0.69803923, 0.6039216, 0.36862746, 1)
theme_override_fonts/font = ExtResource("3_j0e48")
theme_override_font_sizes/font_size = 30
text = "4"

[node name="5" type="Button" parent="CanvasLayer/Levels/Buttons"]
layout_mode = 0
offset_left = 11.0
offset_top = 255.0
offset_right = 49.0
offset_bottom = 298.0
theme_override_colors/font_color = Color(0.69803923, 0.6039216, 0.36862746, 1)
theme_override_fonts/font = ExtResource("3_j0e48")
theme_override_font_sizes/font_size = 30
text = "5"

[node name="6" type="Button" parent="CanvasLayer/Levels/Buttons"]
layout_mode = 0
offset_left = 11.0
offset_top = 307.0
offset_right = 49.0
offset_bottom = 350.0
theme_override_colors/font_color = Color(0.69803923, 0.6039216, 0.36862746, 1)
theme_override_fonts/font = ExtResource("3_j0e48")
theme_override_font_sizes/font_size = 30
text = "6"

[node name="7" type="Button" parent="CanvasLayer/Levels/Buttons"]
layout_mode = 0
offset_left = 11.0
offset_top = 363.0
offset_right = 49.0
offset_bottom = 406.0
theme_override_colors/font_color = Color(0.69803923, 0.6039216, 0.36862746, 1)
theme_override_fonts/font = ExtResource("3_j0e48")
theme_override_font_sizes/font_size = 30
text = "7"

[node name="8" type="Button" parent="CanvasLayer/Levels/Buttons"]
layout_mode = 0
offset_left = 11.0
offset_top = 417.0
offset_right = 49.0
offset_bottom = 460.0
theme_override_colors/font_color = Color(0.69803923, 0.6039216, 0.36862746, 1)
theme_override_fonts/font = ExtResource("3_j0e48")
theme_override_font_sizes/font_size = 30
text = "8"

[node name="Fog" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_4ytvr")
custom_minimum_size = Vector2(100, 100)
offset_left = -656.0
offset_top = -545.0
offset_right = 704.0
offset_bottom = 437.0
mouse_filter = 2

[node name="OuterCircle" parent="." instance=ExtResource("5_sy34g")]
position = Vector2(2, 348)
scale = Vector2(1.2, 1.2)
enable_rotation = false

[node name="Coq3" type="Sprite2D" parent="OuterCircle" groups=["rotate"]]
self_modulate = Color(1, 1, 1, 0.3764706)
position = Vector2(-49.999992, -40.833324)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_83t6f")

[node name="Chevron" parent="OuterCircle" instance=ExtResource("7_h1vtx")]
position = Vector2(-1, -250)

[node name="Collector" parent="OuterCircle" instance=ExtResource("8_eaqdx")]
position = Vector2(-1.0000002, -250.99997)
rotation = -3.1361804

[node name="Source" parent="OuterCircle" instance=ExtResource("9_t8y1r")]
number_of_rays = 3
start_angle = -90

[node name="Line2D" type="Line2D" parent="OuterCircle/Source"]
position = Vector2(-3.3333333, -1.6666666)
points = PackedVector2Array(0.8333334, -25.833344, 1.6666666, -225)
width = 3.0
default_color = Color(0.45490196, 1, 1, 1)

[node name="Title" type="Label" parent="."]
self_modulate = Color(0.6973565, 0.604338, 0.36816832, 1)
offset_left = -578.0
offset_top = -202.0
offset_right = 572.0
offset_bottom = -76.0
theme = ExtResource("4_pn5dn")
theme_override_fonts/font = ExtResource("3_j0e48")
theme_override_font_sizes/font_size = 100
text = "CLOCKWORK COLLECTOR"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Start" type="Button" parent="."]
visible = false
self_modulate = Color(0.6, 0.56078434, 0.45490196, 1)
offset_left = -80.0
offset_top = -156.0
offset_right = 81.0
offset_bottom = -111.0
theme_override_fonts/font = ExtResource("3_j0e48")
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_13sgg")

[node name="Sfx" type="Node" parent="."]

[node name="Click" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("10_j5env")

[node name="BlockerRing" parent="." instance=ExtResource("11_4spa3")]
position = Vector2(0, 350)
scale = Vector2(0.6, 0.6)

[connection signal="pressed" from="CanvasLayer/Levels/Buttons/1" to="." method="_on__pressed"]
[connection signal="pressed" from="CanvasLayer/Levels/Buttons/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Levels/Buttons/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Levels/Buttons/4" to="." method="openLevel" binds= [3]]
[connection signal="pressed" from="CanvasLayer/Levels/Buttons/5" to="." method="openLevel" binds= [4]]
[connection signal="pressed" from="CanvasLayer/Levels/Buttons/6" to="." method="openLevel" binds= [5]]
[connection signal="pressed" from="CanvasLayer/Levels/Buttons/7" to="." method="openLevel" binds= [6]]
[connection signal="pressed" from="CanvasLayer/Levels/Buttons/8" to="." method="openLevel" binds= [7]]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
